--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -61,7 +61,7 @@
         {{ partial "svg-term.html" . }}
         <div class="container pt-4">
             <div class="row">
-                <div class="col">
+                <div class="col card-single">
                     <div class="d-flex justify-content-between">
                         <div class="me-3 entry-card--initial entry-card--initial__{{ lower (substr $firstname 0 1) }}">
                             <span>
