update bg color

--- a/assets/scss/_comp/_comp.scss
+++ b/assets/scss/_comp/_comp.scss
@@ -18,9 +18,9 @@
 
 
 
-body {
-    background: rgba( $primary, .04 );
-}
+//body {
+//    background: rgba( $primary, .04 );
+//}
 
 .xcateg-nav {
     @extend %dev;
