--- a/assets/scss/_variables_.scss
+++ b/assets/scss/_variables_.scss
@@ -401,7 +401,7 @@ $position-values: (
 //
 // Settings for the `<body>` element.
 
-$body-bg:                   $white !default;
+$body-bg:                   rgba( $primary, .04 );  // $white x!default;
 $body-color:                $gray-900 !default;
 $body-text-align:           null !default;
 
