--- a/assets/scss/bootstrap5.scss
+++ b/assets/scss/bootstrap5.scss
@@ -10,6 +10,7 @@
 @import "bootstrap/functions";
 @import "_variables_";
 @import "bootstrap/variables";
+@import "theme";
 @import "bootstrap/mixins";
 @import "bootstrap/utilities";
 
