--- a/assets/scss/_comp/navbar.scss
+++ b/assets/scss/_comp/navbar.scss
@@ -1,26 +1,9 @@
-// V01 Ill
-$white-100: #FFFFFF;
-$pink-100: #DA0071;
-$pink-200: #AA0071;
-$blue-100: #0045D0;
-
-// V02
-$white-100: #FFFFFF;
-$pink-100: #ff2696;
-$pink-200: #b6037a;
-$blue-100: #073692;
-
-// V03
-$white-100: #FFFFFF;
-$pink-100: #9BA1FF;
-$pink-200: #777ffd;
-$blue-100: rgba(#0AF8FF, .2);
 
 .logo__v1 {
-    --white-100: #{$white-100};
-    --pink-100: #{$pink-100};
-    --pink-200: #{$pink-200};
-    --blue-100: #{$blue-100};
+    --white-100: #{$c-white-100};
+    --pink-100: #{$c-pink-100};
+    --pink-200: #{$c-pink-200};
+    --blue-100: #{$c-blue-100};
 }
 .logo__v2 {
     --col1: #FFFFFF;
