--- a/assets/scss/_comp/navbar.scss
+++ b/assets/scss/_comp/navbar.scss
@@ -52,3 +52,8 @@
         background: darken($blue, 20%);
     }
 }
+
+.navbar-dark .navbar-nav .nav-link.btn {
+    color: $white;
+    @extend .ms-3;
+}
