add space after icon for fees

--- a/layouts/partials/entry-card.html
+++ b/layouts/partials/entry-card.html
@@ -176,7 +176,7 @@
                     {{ if $fees }}
                         <div class="alert alert-primary d-flex align-items-center" role="alert">
                             {{ if eq $svg 2 }}
-                                <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="24" height="24" fill="currentColor">
+                                <svg class="me-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="24" height="24" fill="currentColor">
                                     <use xlink:href="#fee" />
                                 </svg>
                             {{ else if eq $svg 1 }}
