--- a/layouts/partials/_nav.html
+++ b/layouts/partials/_nav.html
@@ -4,7 +4,7 @@
 
 <nav class="navbar navbar-dark xbg-dark xfixed-top navbar-expand-lg">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="/">
+		<a class="navbar-brand" href="/" aria-label="{{ .Site.Title }} logo">
 			{{ if eq .Site.Params.branding 5 }}
 				{{ partial "svg/logo5.svg" . }}
 			{{ else if eq .Site.Params.branding 4 }}
@@ -21,13 +21,13 @@
 				SampleLogo
 			{{ end }}
 		</a>
-		<button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+		<button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="open menu">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
 			<div class="offcanvas-header">
 			<h5 class="offcanvas-title" id="offcanvasNavbarLabel">MENU</h5>
-			<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+				<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 			</div>
 			<div class="offcanvas-body">
 				<ul class="navbar-nav xjustify-content-end xflex-grow-1 pe-3">
@@ -130,7 +130,7 @@
 					<form class="d-flex">
 						<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
 						<button class="btn btn-primary d-flex align-items-center" type="submit">
-							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search me-2" viewBox="0 0 16 16">
+							<svg role="img" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search me-2" viewBox="0 0 16 16">
 								<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
 							</svg>SEARCH
 						</button>
