--- a/layouts/partials/css/template.html
+++ b/layouts/partials/css/template.html
@@ -3,7 +3,7 @@
 */}}
 {{ $css := resources.Get .scss | resources.ExecuteAsTemplate .scss . | resources.ToCSS (dict "targetPath" .targetPath) | resources.PostCSS (dict "config" .conf "noMap" false) | resources.Minify }}
 
-{{ $customCSS := $css.Content | resources.FromString .targetPath | resources.Fingerprint "sha512" }}
+{{ $customCSS := $css.Content | resources.FromString .targetPath }}
 
 <link rel="stylesheet" href="{{ $customCSS.Permalink }}" integrity="{{ $customCSS.Data.Integrity }}">
 
