--- a/layouts/partials/entry-card.html
+++ b/layouts/partials/entry-card.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="flex-grow-1">
                     <h4 class="h5 entry-card--title mb-0">
-                        <a href="{{ .Permalink }}">
+                        <a href="{{ .RelPermalink }}">
                             {{ $titleCard }}
                         </a>
                     </h4>
