Display email+web+web2 in entry-card

--- a/layouts/partials/entry-card.html
+++ b/layouts/partials/entry-card.html
@@ -156,10 +156,9 @@
                 <span class="badge rounded-pill bg-secondary">{{ $id }}</span>
             {{ end }}
                 
-            <span class="badge rounded-pill bg-secondary">{{ $email2 }}</span>
-            <span class="badge rounded-pill bg-secondary">{{ $email_note }}</span>
+            <span class="badge rounded-pill bg-secondary">{{ $email }}</span>
+            <span class="badge rounded-pill bg-secondary">{{ $website }}</span>
             <span class="badge rounded-pill bg-secondary">{{ $website2 }}</span>
-            <span class="badge rounded-pill bg-secondary">{{ $website_Note }}</span>
 
         </div>
         {{ if $short_desc }}    
