--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,8 +1,5 @@
 {{ define "main" }}
-	
-	<div class="row g-0">
-		<div class="col homeContent">
-			{{ .Content }}
-		</div>
-	</div>
+<div class="row g-0">
+  <div class="col homeContent">{{ .Content }}</div>
+</div>
 {{ end }}
